--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                 <input type="text" name="name" id="name">
                 <label for="name"><i>Название</i></label>
                 <div>
-                    <button onClick="create_book()">
+                    <button onClick="createBook()">
                         Добавить
                     </button>
                 </div>
